# orbitshield

./: .gitignore  CMakeLists.txt  README.md
data/: iridium-20260312.csv  iridium-20260312.rings  iridium-20260312.txt  iridium-20260312.yaml
examples/: CMakeLists.txt  orbitshield-basic-example.cc  orbitshield-dynamic-topology.cc  orbitshield-load-from-ring.cc  orbitshield-load-from-tle.cc  orbitshield-load-from-yaml.cc
model/: constellation.cc  constellation.h  ground-station.cc  ground-station.h  isl-propagation-delay-model.cc  isl-propagation-delay-model.h  orbitshield-module.h  orbitshield-utils.cc  orbitshield-utils.h  satellite-link.cc  satellite-link.h  satellite-mobility-model.cc  satellite-mobility-model.h  satellite-net-device.cc  satellite-net-device.h  satellite.cc  satellite.h
test/: test-constellation.cc  test-constellation.h  test-isl.cc  test-isl.h  test-orbitshield.cc  test-satellite.cc  test-satellite.h
tools/: analyze_constellation_rings.py  convert_tle_to_csv.py  generate-constellation-image.sh  isl-visualizer.cc  render-isl-worldmap.py
